...
				<View style = {[cs.container, s.content]}>
					{this._getContent()}
				</View>
				{/*Content Selection*/}
				<View style = {[cs.container, s.bottomBar]}>
					<TouchableWithoutFeedback 
						testID = 'agendaButton'
						onPress = {() => this._switchContent('Agenda')}
					>
						<View style = {s.switchButton}>
						{agendaIcon}
						<Text style = {[buttonColor.agenda, {paddingTop:4,fontSize:10}]}>
						Agenda</Text>
						</View>
					</TouchableWithoutFeedback>
					<TouchableWithoutFeedback 
						testID = 'projectButton'
						onPress = {() => this._switchContent('Project')}
					>
						<View style = {s.switchButton}>
						{projectIcon}
						<Text style = {[buttonColor.project, {paddingTop:4,fontSize:10}]}>
						Project</Text>
						</View>
					</TouchableWithoutFeedback>
					<TouchableWithoutFeedback 
						testID = 'invitationButton'
						onPress = {() => this._switchContent('Invitation')}
					>
						<View style = {s.switchButton}>
						{invitationIcon}
						<Text style = {[buttonColor.invitation, {paddingTop:4,fontSize:10}]}>
						Invitation</Text>
						</View>
					</TouchableWithoutFeedback>
					<TouchableWithoutFeedback 
						testID = 'profileButton'
						onPress = {() => this._switchContent('Profile')}
					>
						<View style = {s.switchButton}>
						{profileIcon}
						<Text style = {[buttonColor.profile, {paddingTop:4,fontSize:10}]}>
						Me</Text>
...
